# simply-edit

./: .gitignore  Cargo.toml  README.md
.github/: pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_fix.md  feature_request.md  task.md  user_story.md
playground/: README.md
src/: batch.rs  cli.rs  io.rs  main.rs
src/commands/: convert.rs  mod.rs  transforms.rs
test/: README.md
tests/: batch.rs  cli_smoke.rs  errors.rs  integration.rs  polish.rs  robustness.rs
tests/common/: mod.rs
tests/suites/: batch.rs  errors.rs  integration.rs  polish.rs  robustness.rs
